  23. Say command: if a player speaks same language as person being addressed is speaking, they will try to speak it.  
      Also, untargeted speaking, when only one other person is in the room, will assume to be addressing them. New DISABLE=AUTOLANGUAGE
  24. (Tech) New TriCorder item (portable computer).  Also, internally, class names and locations are shifting as tech takes shape.
//TODO: engines should have max turn thrust, different from max thrust
//TODO: bug: my space ship had a manufacturer name of RANDOM, and it had a techlevel marking (which might be ok, and just not matter)
//TODO: make the tech install skill!!! all put/remove commands should check msg.value() for pct chance/competence
//TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
//      this encourages equality in tech level, which will bleed out into the comparative components (weapons, shields)
//TODO: make enviro control systems
//TODO: retest private libs, private dbtables, private classes, private area objects, private players
//TODO: some way to reposition planets? esp relative to nearby ones
//TODO: create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough.
//TODO: MoneyChanger/Banker behavior to discount currency by its distant origin (farther planet is from origin of currency, less its worth).
//TODO: personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
//TODO: make ship sensor systems
//TODO: add electronics to guides
//TODO: add electronics to MG
//TODO: http://games.groups.yahoo.com/group/coffeemud skip=1885,2881,2953,3274,15908,15914,16267
# Build 5.8.0.1 Release 7/22/2013
  Bug fix release -- removed Go-Ahead chars for tinyfugue
# Build 5.8.0 Release 7/21/2013
   1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.