@@ -112,7 +112,7 @@ well.
 this long command:</p>
       <p><span style="font-family: monospace;">generate area random_dungeon&nbsp;areaname=MyRandomDungeon&nbsp;south</span></p>
       <p>This will generate a
-random 30-60 room dungeon based on one of the random&nbsp;themes in the /resources/randomareas/example.xml file to the south of
+random 30-60 room dungeon based on one of the random&nbsp;themes in the /resources/randreas/example.xml file to the south of
 your current room.</p>
       <p>If you'd like to actually learn how to use the CoffeeMud
 engine, you should do the following:</p>
