@@ -230,7 +230,7 @@ Required details: "id" "value"
 <AREADATA>
 <AREA id="maze_dungeon" layout="MAZE" requires="areaname=$,areasize=int,level_range=int,aggrochance=int,theme=prison;rats;kobolds;random">
     <NAME>$areaname</NAME><SIZE>$areasize</SIZE>
-    <CLASS select="any"><CLASS condition="$areatype!=''">$areatype</CLASS><CLASS condition="$areatype=''">StdArea</CLASS></CLASS>
+    <CLASS select="any-1"><CLASS condition="$areatype!=''">$areatype</CLASS><CLASS condition="$areatype=''">StdArea</CLASS></CLASS>
     <ROOM id="dungeon_rooms" insert="dungeon_hallways,dungeon_interior,dungeon_leaf" />
     <BEHAVIOR select="all" id="dungeon_behaviors">
         <BEHAVIOR condition="$theme='kobolds'" class="RandomTraps" parms="mintraps=1 maxtraps=$AREA_SIZE/2 rooms=Y exits=Y" />
@@ -245,10 +245,13 @@ Required details: "id" "value"
 </AREA>
 <AREA id="tree_dungeon" like="maze_dungeon" layout="TREE" requires="areaname=$,areasize=int,level_range=int,aggrochance=int,theme=prison;rats;kobolds;random" >
 </AREA>
-<AREA id="random_dungeon" select="pick-1" requires="areaname=$" 
+<AREA id="random_dungeon" select="any" requires="areaname=$" 
         insert="maze_dungeon,grid_dungeon,box_dungeon,cross_dungeon,tree_dungeon" 
-        predefine="areasize=20?60,level_range=1?91,aggrochance=20+$level_range,theme=random" >
+        predefine="areasize=$randomareasize,level_range=$randomlevelrange,aggrochance=20+$level_range,theme=$randomtheme" >
 </AREA>
+<string id="randomareasize" select="any-1"><string condition="$areasize!=''">$areasize</string><string condition="$areasize=''">30?60</string></string>
+<string id="randomlevelrange" select="any-1"><string condition="$level_range!=''">$level_range</string><string condition="$level_range=''">1?91</string></string>
+<string id="randomtheme" select="any-1"><string>prison</string><string>rats</string><string>kobolds</string><string>random</string></string>
 
 <ROOM id="dungeon_hallways" select="pick-1" condition="$roomtag_nodetype='street' or $roomtag_nodetype='surround'">
     <ROOM class="CaveRoom" pickweight="5">
